# itmo-is-ml-knn-2024-5-sem

./: Cargo.toml  result.txt
src/: distance_metric.rs  kernel.rs  knn.rs  lib.rs  lowess.rs  main.rs  parse.rs
src/parse/: breast_cancer.rs  phones.rs  subtitles.rs
