[package]
name = "knn"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
csv = "1.3.0"
kiddo = "4.2.1"
serde = { version = "1.0.214", features = ["derive"] }
